--- a/autogestor_backend/.env.example
+++ b/autogestor_backend/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=TODO Mudar Nome do Projeto
+APP_NAME=AutoGestor
 APP_ENV=local
-APP_KEY=TODO Rodar php artisan key:generate
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=TODO Inserir nome do Banco de Dados
-DB_USERNAME=TODO Inserir User name do banco de dados
-DB_PASSWORD=TODO Inserir senha do banco de dados
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -40,7 +40,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_SECRET=TODO Rodar php artisan jwt:secret
+JWT_SECRET=
 JWT_TTL=21600
 JWT_REFRESH_TTL=21600000
 JWT_BLACKLIST_GRACE_PERIOD=30
